--- a/trackSheet/package.json
+++ b/trackSheet/package.json
@@ -24,10 +24,14 @@
     "moleculer-repl": "^0.5.7"
   },
   "dependencies": {
-    "moleculer-web": "^0.8.5",
-    "nats": "^1.3.0",
     "ioredis": "^4.14.0",
-    "moleculer": "^0.13.9"
+    "moleculer": "^0.13.9",
+    "moleculer-db": "^0.8.4",
+    "moleculer-db-adapter-mongoose": "^0.8.3",
+    "moleculer-web": "^0.8.5",
+    "mongoose": "^5.7.12",
+    "nats": "^1.3.0",
+    "redlock": "^4.1.0"
   },
   "engines": {
     "node": ">= 8.x.x"
