--- a/trackSheet/package.json
+++ b/trackSheet/package.json
@@ -31,6 +31,7 @@
     "moleculer-web": "^0.8.5",
     "mongoose": "^5.7.12",
     "nats": "^1.3.0",
+    "redis": "^2.8.0",
     "redlock": "^4.1.0"
   },
   "engines": {
