--- a/user/package.json
+++ b/user/package.json
@@ -36,6 +36,7 @@
     "moleculer-web": "^0.8.5",
     "mongoose": "^5.7.12",
     "nats": "^1.3.0",
+    "redis": "^2.8.0",
     "redlock": "^4.1.0"
   },
   "engines": {
