--- a/tracksheet/package.json
+++ b/tracksheet/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trackSheet",
+  "name": "tracksheet",
   "version": "1.0.0",
   "description": "My Moleculer microservices project",
   "scripts": {
